--- a/static/apicall.html
+++ b/static/apicall.html
@@ -3,18 +3,23 @@
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Call REST API Functions</title>
     <script>
-      var url, param, method, body, stat, result, data
+      var url, param, method, body, stat, result, data, token;
       function setGlobals() {
-        url = document.getElementById('url')
-        method = document.getElementById('method')
-        body = document.getElementById('body')
-        stat = document.getElementById('stat')
-        response = document.getElementById('response')
+        url = document.getElementById('url');
+        method = document.getElementById('method');
+        body = document.getElementById('body');
+        stat = document.getElementById('stat');
+        response = document.getElementById('response');
+        token = document.getElementById('token');
       }
 
       function makeRequest() {
         var request = new XMLHttpRequest()
-        request.open(method.value, `${url.value.trim()}`)
+        request.open(method.value, `${url.value.trim()}`);
+        const bearer = token.value.trim();
+        if (bearer) {
+          request.setRequestHeader('Authorization', 'Bearer ' + bearer);
+        }
         request.setRequestHeader('Content-Type', 'application/json')
         request.onreadystatechange = function() {
           if (request.readyState == 4) {
@@ -53,13 +58,19 @@
     <style>
       section { margin: 1em 0 }
       #url {
-          width: 100ex;
+          width: 120ex;
       }
       #body {
           font: 12pt "Courier New",monospace;
           width: 180ex; height: 20em;
           border: 1px solid #666;
           resize: both;
+      }
+      #method {
+        margin-right: 10ex;
+      }
+      #token {
+        width: 80ex;
       }
       #response {
           font: 12pt "Courier New",monospace;
@@ -85,6 +96,8 @@
         <option>PUT</option>
         <option>DELETE</option>
       </select>
+      Token:
+      <input id="token" type="text">
     </section>
     <section>
       Body:<br>
